--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                    <img src="<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Tj_DHjrjn-1LZ5Grw8CDv_NTZCyyvJ_LHA&amp;s" alt="O fim? The Weeknd fala sobre aposentar o nome artístico e planeja nova era  na carreira"/>" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
