--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="thew3.jepg"
+                        <img src="thew3.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
