--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="thew4.jpeg" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
+            <img src="general-brianziff-theweeknd-800-1-with-beauty-scaled.jpg" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -32,6 +32,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
+                    <div class="thewziff"> </div>
                     <img src="1_the_weeknd_2_brian_ziff-39446493.jpg" alt="O fim? The Weeknd fala sobre aposentar o nome artístico e planeja nova era  na carreira"/>" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
