--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
+            <div class="theweeknd2"> </div>
             <img src="general-brianziff-theweeknd-800-1-with-beauty-scaled.jpg" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
+        </div>
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -33,8 +35,8 @@
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <div class="theweeknd"> </div>
-                    <img src="1_the_weeknd_2_brian_ziff-39446493.jpg" alt="O fim? The Weeknd fala sobre aposentar o nome artístico e planeja nova era  na carreira"/>" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
-                        height="278" loading="lazy">
+                    <img src="1_the_weeknd_2_brian_ziff-39446493.jpg" alt="O fim? The Weeknd fala sobre aposentar o nome artístico e planeja nova era  na carreira"/>" alt="Logotipo secundário da Tropicália" class="mb-3" width="400"
+                        height="150" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
