--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <div class="theweeknd"> </div>
+                    <div class="theweeknd"> 
                     <img src="1_the_weeknd_2_brian_ziff-39446493.jpg" alt="O fim? The Weeknd fala sobre aposentar o nome artístico e planeja nova era  na carreira"/>" alt="Logotipo secundário da Tropicália" class="mb-3" width="400"
                         height="150" loading="lazy">
+                    </div>
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
